--- a/index.html
+++ b/index.html
@@ -1,20 +1,162 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Hello world</title>
-    <meta name="description" content="Hello world">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-    <p>Hello world!</p>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>Flexbox</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,optgroup,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre,textarea{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}table{border-collapse:collapse;border-spacing:0}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-2.1.4.min.js"><\/script>')</script>
-    <!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
-    <script src="js/main.js"></script>
-  </body>
+/* Main Styles */
+
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  padding: 1em;
+}
+
+button {
+  background: #36c;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border: 0;
+}
+
+/* #01 */
+
+.grid {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.grid li {
+  flex: 1 25%;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  padding: 3em;
+  background: rgba(0,0,0,0.1);
+  border: 1px solid #ccc;
+}
+
+.grid li > div {
+  flex: 1;
+}
+
+.grid li h3 {
+  margin-top: 0;
+}
+
+
+</style>
+</head>
+<body>
+<h1>Flexbox examples</h1>
+<h2>#01: Simple grid</h2>
+<p>Flexible grid, items vertically centered and each items matches the row's tallest item.</p>
+<ul class="grid">
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    <button>Learn more</button>
+    </div>
+  </li>
+  <li>
+    <div>
+    <h3>Lorem ipsum</h3>
+    <p>Lorem ipsum dolor sit amet</p>
+    <button>Learn more</button>
+    </div>
+  </li>
+</ul>
+</body>
 </html>
